# Alphabet

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Packaging.cmake  README.md  application.pro
.circleci/: config.yml
cmake/include/: version.h
cmake/modules/: BuildSetup.cmake  CPackLinuxDeployQt.cmake.in  CPackMacDeployQt.cmake.in  MakeVersion.cmake  Packaging.cmake  genericRules.cmake  rulesForSds.cmake  version.cpp.in
cmake/resources/: application.desktop.in  window.rc.in
cmake/src/: version.cpp.in
cmake2/modules/: toolchain_sds.cmake
docs/: _config.yml  index.md
resources/: alphabet.desktop  window.rc
scripts/windows/: build.bat  install_qt5.bat
src/: alphabet.pro  application.qrc  main.cpp  mainwindow.cpp  mainwindow.ui
